# datagen

./: .gitignore  .token  LICENSE  README.md  benchmark_results.json  datagen.example.yaml  deploy_notebook.py  deploy_wheel.py  generate_interactive_token.py  pyproject.toml  queries.json  requirements.txt  test_query.dax  users.json
datagen/: __init__.py  __main__.py  build_notebook.py  cli.py  compare.py  config.py  config_generator.py  date_table.py  dax_literal_extractor.py  dax_rewriter.py  email_generator.py  geo_generator.py  histogram_validator.py  histograms_sidecar.py  model_builder.py  name_generator.py  pool_generator.py  relationship_type_fixer.py  spark_generator.py  vpax_parser.py
loadgen/: LoadGen.csproj  Program.cs
notebook/Datagen Main.Notebook/: notebook-content.ipynb
notebooks/: generate_data.py
notebooks/Datagen Main.Notebook/: .platform  notebook-content.ipynb
queryrunner/: DatagenQueryRunner.csproj  QueryRunner.cs
scripts/: analyze_funnel.py  build_notebook.py  convert_and_benchmark.py  discover_rls.py  discover_rls2.py  find_test_query.py  investigate_query.py  modify_rls.py  run_benchmark.py  test_dax_rewrite.py  test_import_queries.py  test_tmdl.py
test_logs/: LoadTest.20260411-094233.csv  LoadTest.20260411-095741.csv
